Before making Node abstract